kubernetes/reddit/post-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      name: post
      labels:
        app: post
    spec:
      containers:
      - image: soaron/post:logging
        name: post
        ports:
        - containerPort: 5000
