kubernetes/reddit/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: reddit
    component: mongo 
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: reddit
    component: mongo
