kubernetes/reddit/post-service.yml
apiVersion: v1
kind: Service
metadata:
  name: post
  labels:
    app: reddit
    component: post 
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: reddit
    component: post
