kubernetes/reddit/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  type: NodePort 
  ports:
  - port: 9292
  selector:
    app: ui
