kubernetes/reddit/reddit-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "reddit-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: 	arn:aws:acm:eu-west-3:420202121842:certificate/93694bdd-0188-4ea8-9eb9-4a10f435c3c3
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: reddit
spec:
  tls:
    - secretName: reddit-ingress
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: "ui"
              servicePort: 9292
